--- a/ModulProjekt/code/app/src/main/res/layout/activity_main.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_main.xml
@@ -115,6 +115,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
+        android:onClick="onClickAdd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/add_button" />
