--- a/ModulProjekt/code/app/src/main/res/layout/activity_main.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_main.xml
@@ -5,97 +5,41 @@
     android:id="@+id/HomeScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/neutral_background"
     tools:context=".MainActivity">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/neutral_background">
+    <TextView
+        android:id="@+id/lbl_City"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:gravity="center"
+        android:text="@string/home_city_name"
+        android:textColor="@android:color/background_light"
+        android:textSize="@dimen/home_title_font_size"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Favorit"
+        tools:visibility="visible" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/firstPage"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/lbl_Temperatur"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginBottom="80dp"
-                    android:text="@string/home_temperature"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/home_title_font_size"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <TextView
-                    android:id="@+id/lbl_City"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginTop="100dp"
-                    android:layout_marginEnd="50dp"
-                    android:layout_marginRight="50dp"
-                    android:gravity="center"
-                    android:text="@string/home_city_name"
-                    android:textColor="@android:color/background_light"
-                    android:textSize="@dimen/home_title_font_size"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </android.support.constraint.ConstraintLayout>
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/secondPage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/lbl_City2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginTop="100dp"
-                    android:layout_marginEnd="50dp"
-                    android:layout_marginRight="50dp"
-                    android:gravity="center"
-                    android:text="City2"
-                    android:textColor="@android:color/background_light"
-                    android:textSize="@dimen/home_title_font_size"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/lbl_Temperatur2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginBottom="80dp"
-                    android:text="@string/home_temperature"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/home_title_font_size"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-            </android.support.constraint.ConstraintLayout>
-
-        </LinearLayout>
-
-    </android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/lbl_Temperatur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="80dp"
+        android:onClick="onClickOpenDetails"
+        android:text="@string/home_temperature"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/home_title_font_size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/btn_Favorit"
