--- a/ModulProjekt/code/app/src/main/res/layout/activity_search_listview_layout.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_search_listview_layout.xml
@@ -21,4 +21,12 @@
         android:gravity="left"
         android:padding="5dp" />
 
+    <Button
+        android:id="@+id/showdetailsbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:onClick="onClickOpenDetails"
+        android:text="Button" />
+
 </LinearLayout>
