Another fragment optimization

--- a/ModulProjekt/code/app/src/main/res/layout/fragment_city.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/fragment_city.xml
@@ -13,6 +13,17 @@
         android:layout_height="match_parent"
         android:background="@drawable/neutral_background">
 
+        <ImageView
+            android:id="@+id/btn_Favorit"
+            android:layout_width="@dimen/icon_width"
+            android:layout_height="@dimen/icon_height"
+            android:layout_marginTop="@dimen/favorite_icon_constraint_top"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="@dimen/favorite_icon_constraint_right"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/favorite_selected" />
+
         <TextView
             android:id="@+id/lbl_Temperatur"
             android:layout_width="wrap_content"
