--- a/ModulProjekt/code/app/src/main/res/layout/activity_search.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_search.xml
@@ -21,8 +21,9 @@
         android:id="@+id/listCities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:background="#00FFFFFF"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="110dp" />
+        app:layout_constraintTop_toBottomOf="@+id/searchcity"
+        tools:layout_editor_absoluteX="0dp" />
 
 </android.support.constraint.ConstraintLayout>
