Tried to change background dynamically

--- a/ModulProjekt/code/app/src/main/res/layout/fragment_city.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/fragment_city.xml
@@ -9,6 +9,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/neutral_background">
