--- a/ModulProjekt/code/app/src/main/res/layout/activity_search.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_search.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/neutral_background"
     tools:context="ch.ny.searchactivity.SearchActivity">
 
     <SearchView
@@ -21,9 +22,14 @@
         android:id="@+id/listCities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:background="#00FFFFFF"
-        app:layout_constraintTop_toBottomOf="@+id/searchcity"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchcity" />
 
 </android.support.constraint.ConstraintLayout>
