--- a/ModulProjekt/code/app/src/main/res/layout/activity_details.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_details.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_dark"
-    tools:context="ch.ny.detailsactivity.DetailsActivity" >
+    android:background="@android:color/darker_gray"
+    tools:context="ch.ny.detailsactivity.DetailsActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -60,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
         android:layout_width="396dp"
         android:layout_height="130dp"
         android:layout_marginTop="55dp"
@@ -72,4 +73,11 @@
             android:layout_height="match_parent"
             android:orientation="vertical" />
     </HorizontalScrollView>
+
+    <ListView
+        android:layout_width="395dp"
+        android:layout_height="347dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
+        tools:layout_editor_absoluteX="8dp" />
 </android.support.constraint.ConstraintLayout>
