--- a/ModulProjekt/code/app/src/main/res/layout/activity_search_listview_layout.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_search_listview_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/TheItem"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -26,7 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:onClick="onClickOpenDetails"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:text="Button" />
 
 </LinearLayout>
