--- a/ModulProjekt/code/app/src/main/res/layout/activity_search_listview_layout.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_search_listview_layout.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="5"
         android:gravity="left"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/textview_itemnumber_listview"
@@ -20,15 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="left"
-        android:padding="5dp" />
-
-    <Button
-        android:id="@+id/showdetailsbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:text="Button" />
+        android:padding="5dp"
+        android:textSize="24sp" />
 
 </LinearLayout>
