--- a/ModulProjekt/code/app/src/main/res/layout/activity_details.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_details.xml
@@ -7,18 +7,8 @@
     android:background="@android:color/darker_gray"
     tools:context="ch.ny.detailsactivity.DetailsActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/icon_width"
-        android:layout_height="@dimen/icon_height"
-        android:layout_marginTop="@dimen/favorite_icon_constraint_top"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="@dimen/favorite_icon_constraint_right"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/lblTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
@@ -26,7 +16,6 @@
         android:layout_marginTop="85dp"
         android:layout_marginEnd="70dp"
         android:layout_marginRight="70dp"
-        android:text="TextView"
         android:textColor="@android:color/white"
         android:textSize="@dimen/activity_title_font_size"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,20 +23,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/lblMainTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="130dp"
         android:layout_marginLeft="130dp"
         android:layout_marginTop="24dp"
-        android:text="11°C"
         android:textColor="@android:color/white"
         android:textSize="@dimen/activity_title_font_size"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/lblTitle" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/IconStatus"
         android:layout_width="@dimen/icon_width"
         android:layout_height="@dimen/icon_height"
         android:layout_marginStart="20dp"
@@ -56,28 +44,35 @@
         android:layout_marginEnd="145dp"
         android:layout_marginRight="145dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="396dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="55dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-    </HorizontalScrollView>
+        app:layout_constraintStart_toEndOf="@+id/lblMainTemp"
+        app:layout_constraintTop_toBottomOf="@+id/lblTitle" />
 
     <ListView
+        android:id="@+id/listHourly"
+        android:layout_width="394dp"
+        android:layout_height="103dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="85dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/IconStatus"
+        android:orientation="horizontal"
+        >
+
+    </ListView>
+
+    <ListView
+        android:id="@+id/listWeekly"
         android:layout_width="395dp"
         android:layout_height="347dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
