--- a/ModulProjekt/code/app/src/main/res/layout/activity_details_weekly_listview_layout.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_details_weekly_listview_layout.xml
@@ -9,19 +9,25 @@
         android:layout_width="134dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@android:color/white"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/lblMinTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@android:color/white"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/lblMaxTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@android:color/white"
+        android:textSize="24sp" />
 </LinearLayout>
