--- a/ModulProjekt/code/app/src/main/res/layout/activity_search.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/neutral_background"
-    tools:context="ch.ny.searchactivity.SearchActivity">
+    tools:context="ch.ny.screens.searchactivity.SearchActivity">
 
     <SearchView
         android:id="@+id/searchcity"
