--- a/ModulProjekt/code/app/src/main/res/layout/activity_details_hourly_recyclerview_layout.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_details_hourly_recyclerview_layout.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="TextView"
         android:textSize="14sp" />
 
     <ImageView
@@ -24,6 +23,5 @@
         android:id="@+id/lblTemp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="TextView" />
+        android:gravity="center" />
 </LinearLayout>
