--- a/ModulProjekt/code/app/src/main/res/layout/activity_search_listview_layout.xml
+++ b/ModulProjekt/code/app/src/main/res/layout/activity_search_listview_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="5"
-        android:gravity="left"
+        android:gravity="start"
         android:padding="5dp"
         android:textSize="24sp" />
 
@@ -20,7 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="left"
+        android:gravity="start"
         android:padding="5dp"
         android:textSize="24sp" />
 
